syntax = "proto3";

package work.sunist.project.alioth.rpc.proto;
option go_package = "./alioth";

message HandlerListRequest {
  int32 page_limit = 1;
  int32 page_offset = 2;
}

message HandlerListResponse {
  int32 total = 1;
  int32 page_limit = 2;
  int32 page_offset = 3;
  repeated HandlerRecord services = 4;
}

message HandlerRecord {
  string service = 1;
  string description = 2;
  string router_group = 3;
  string version = 4;
  repeated HandlerInterface interfaces = 5;
  string created_at = 6;
  string updated_at = 7;
}

message HandlerInterface {
  string http_method = 1;
  string relative_url = 2;
  map<string, string> parse_headers = 3;
  map<string, string> parse_cookies = 4;
  map<string, string> parse_query = 5;
  map<string, string> parse_url_params = 6;
  bool authorization = 7;
  repeated string required_permissions = 8;
}
